<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPhotoMarkerFragment">

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="4dp"
        android:text="@string/cancel"
        app:icon="@android:drawable/ic_menu_close_clear_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/saveButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:text="@string/save"
        app:icon="@android:drawable/ic_menu_save"
        app:layout_constraintBottom_toBottomOf="@+id/cancelButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cancelButton"
        app:layout_constraintTop_toTopOf="@+id/cancelButton" />

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/addPhotoMarkerToolBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:navigationIconTint="@color/white"
        app:title="Photo Marker"
        app:titleTextColor="@color/white" />

    <androidx.cardview.widget.CardView
        android:id="@+id/CardMapView"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addPhotoMarkerToolBar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.gms.maps.MapView
                android:id="@+id/mapViewMarker"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/visualize_marker_in_map"
                app:circularflow_radiusInDP="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/mapTypeFAB2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:foregroundTint="@color/colorOnPrimary"
                android:scaleX="0.7"
                android:scaleY="0.7"
                android:src="@drawable/layer_basemap_svgrepo_com"
                app:backgroundTint="@color/colorPrimary"
                app:backgroundTintMode="add"
                app:layout_constraintBottom_toBottomOf="@+id/mapViewMarker"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.98"
                app:layout_constraintStart_toStartOf="@+id/mapViewMarker"
                app:layout_constraintTop_toTopOf="@+id/mapViewMarker"
                app:layout_constraintVertical_bias="0.98"
                app:shapeAppearanceOverlay="@style/ShapeAppearance.Circle"
                app:tint="@color/colorOnPrimary" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/threeDimensionFAB2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:foregroundTint="@color/colorOnPrimary"
                android:scaleX="0.7"
                android:scaleY="0.7"
                android:src="@drawable/cube_alt_2_svgrepo_com"
                app:backgroundTint="@color/colorPrimary"
                app:backgroundTintMode="add"
                app:layout_constraintBottom_toTopOf="@+id/mapTypeFAB2"
                app:layout_constraintEnd_toEndOf="@+id/mapTypeFAB2"
                app:layout_constraintStart_toStartOf="@+id/mapTypeFAB2"
                app:shapeAppearanceOverlay="@style/ShapeAppearance.Circle"
                app:tint="@color/colorOnPrimary"
                tools:ignore="TouchTargetSizeCheck" />

            <com.google.android.material.slider.Slider
                android:id="@+id/rotationSlider"
                android:layout_width="250dp"

                android:layout_height="4dp"
                android:value="0"
                android:valueFrom="-180"
                android:valueTo="180"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/mapViewMarker"
                app:layout_constraintVertical_bias="1.0"
                app:trackColorInactive="#5F7A81"
                tools:ignore="SpeakableTextPresentCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/cancelButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CardMapView"
        app:layout_constraintVertical_bias="0.0">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="">

                <Button
                    android:id="@+id/addPhotoButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:text="@string/add_photos"
                    app:icon="@android:drawable/ic_menu_add"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/noteEditText" />

                <EditText
                    android:id="@+id/noteEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:ems="10"
                    android:hint="@string/enter_note"
                    android:inputType="text"
                    android:maxLines="6"
                    android:minHeight="48dp"
                    android:textColorHint="@color/colortexthint"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tableLayout"
                    tools:ignore="Autofill" />

                <TableLayout
                    android:id="@+id/tableLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:measureWithLargestChild="true"
                    android:paddingTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            android:layout_weight="1"
                            android:text="@string/name"
                            android:textColor="@color/white"
                            android:textSize="16sp" />

                        <EditText
                            android:id="@+id/namePhotoEditTextView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="24dp"
                            android:layout_weight="1"
                            android:ems="10"
                            android:hint="@string/enter_name"
                            android:inputType="text"
                            android:minHeight="48dp"
                            android:textColorHint="@color/colortexthint"
                            android:textSize="16sp"
                            tools:ignore="Autofill" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            android:layout_weight="0.5"
                            android:text="@string/photography_genre"
                            android:textColor="@color/colorOnPrimary"
                            android:textSize="16sp" />

                        <Spinner
                            android:id="@+id/genreSpinner"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.4"
                            android:background="@color/colorPrimaryDark"
                            android:hapticFeedbackEnabled="true" />

                        <ImageView
                            android:id="@+id/genreIconImageView"
                            android:layout_width="0dp"
                            android:layout_height="50dp"
                            android:layout_marginEnd="24dp"
                            android:layout_weight="0.1"
                            android:background="@color/colorPrimaryDark"
                            android:backgroundTint="@color/colorPrimaryDark"
                            android:contentDescription="@string/photography_genre"
                            app:srcCompat="@drawable/astro_icon" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            android:layout_weight="1"
                            android:text="@string/shutter_speed"
                            android:textColor="@color/white"
                            android:textSize="16sp" />

                        <Spinner
                            android:id="@+id/shutterSpeedSpinner"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="24dp"
                            android:layout_weight="1"
                            android:background="@color/colorPrimaryDark" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            android:layout_weight="1"
                            android:text="@string/f_stop"
                            android:textColor="@color/colorOnPrimary"
                            android:textSize="16sp" />

                        <Spinner
                            android:id="@+id/fStopSpinner"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="24dp"
                            android:layout_weight="1"
                            android:background="@color/colorPrimaryDark" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            android:layout_weight="1"
                            android:text="@string/iso"
                            android:textColor="@color/white"
                            android:textSize="16sp" />

                        <Spinner
                            android:id="@+id/isoSpinner"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="24dp"
                            android:layout_weight="1"
                            android:background="@color/colorPrimaryDark" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:autofillHints="">

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            android:layout_weight="1"
                            android:autofillHints=""
                            android:text="@string/focal_length"
                            android:textColor="@color/white"
                            android:textSize="16sp" />

                        <EditText
                            android:id="@+id/focalLengthEditText"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="24dp"
                            android:layout_weight="1"
                            android:ems="10"
                            android:inputType="text"
                            android:text="@string/default_focal_length"
                            android:textSize="16sp"
                            tools:ignore="Autofill" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/textView9"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            android:layout_weight="1"
                            android:text="@string/tag"
                            android:textColor="@color/white"
                            android:textSize="16sp" />

                        <EditText
                            android:id="@+id/tagEditText"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="24dp"
                            android:layout_weight="1"
                            android:ems="10"
                            android:hint="@string/enter_tag"
                            android:inputType="text"
                            android:textColorHint="@color/colortexthint"
                            android:textSize="16sp"
                            tools:ignore="Autofill" />
                    </TableRow>
                </TableLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>